prevents overflowing when new messages are appended

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -36,6 +36,7 @@ h1{
 
     width: 70%;
     height: 90%;
+    overflow-y: auto;
 }
 
 .actions-wrapper{
@@ -66,12 +67,9 @@ h1{
    font-family: Arial, Helvetica, sans-serif;
 }
 
-#messages_list{
-}
-
 .youre-message{
     position: relative;
-    left: 85%;
+    left: 75%;
     display: flex;
     align-items: center;
     background-color: rgb(52, 115, 170);
@@ -90,7 +88,7 @@ h1{
 /* this classs actually target a div image container */
 /* might change this name later on */
     position: relative;
-    left: 73%;
+    left: 64%;
     top: -108px;
     height: 100px;
     width: 100px;
@@ -110,7 +108,7 @@ h1{
 
     position: relative;
     top: -90px;
-    left: 73%;
+    left: 64%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
     width: fit-content;
